squash various bugs

--- a/app/spectator.css
+++ b/app/spectator.css
@@ -67,6 +67,10 @@ img {
     height: 27px;
 }
 
+#ChampRound {
+    display: none;
+}
+
 .flex-container-row {
     display: flex;
     justify-content: space-around;
@@ -138,6 +142,7 @@ img {
     margin-bottom: 10px;
     background-color: #eee;
     overflow-y: auto;
+    padding: 5px;
 }
 #CurrentRound table {
     border-collapse: collapse;
@@ -172,6 +177,7 @@ img {
     height: calc(45vh - 60px);
     min-height: 300px;
     width: 48%;
+    padding: 5px;
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
@@ -302,7 +308,7 @@ table#tableRound tr:nth-child(odd) {
 .first_place_B {
     order: 1;
     box-shadow: 3px 3px 4px 1px rgba(204,153,0,1.0),4px 4px 2px 1px rgba(0,0,0,0.6), 25px 12px 25px 10px rgba(153,102,0,0.4);
-    transform: translate3d(10px,25px,25px);
+    transform: translate3d(100px,25px,25px);
     z-index: 100;
 }
 
@@ -315,7 +321,7 @@ table#tableRound tr:nth-child(odd) {
 .second_place_B {
     order: 2;
     box-shadow: 3px 3px 4px 1px rgba(192,192,192,1.0), 4px 4px 2px 1px rgba(0,0,0,0.6), 25px 12px 25px 10px rgba(50,50,50,0.5);
-    transform: translate3d(60px,25px,18px);
+    transform: translate3d(25px,25px,18px);
     z-index: 75;
 }
 .third_place {
