--- a/app/splash.css
+++ b/app/splash.css
@@ -66,7 +66,7 @@ img {
     border-radius: 50%;
     width: 250px;
     height: 250px;
-    animation: spin 2s linear infinite;
+    animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
